--- a/Resgistration Form/style.css
+++ b/Resgistration Form/style.css
@@ -1,12 +1,32 @@
-body{
+body {
     width: 100%;
     height: 100vh;
     margin: 0;
     background-color: #1b1b32;
-    color: #f5f6f7
+    color: #f5f6f7;
+    font-family:Tahoma;
+    font-size:16px;
 }
 
 label{
     display:block;
     margin: 0.5rem 0;
+}
+
+h1, p{
+    margin: 1em auto;
+    text-align: center;
+}
+
+form{
+    margin: 0 auto;
+    max-width: 500px;
+    min-width: 300px;
+    width: 60vw;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
