--- a/Resgistration Form/style.css
+++ b/Resgistration Form/style.css
@@ -23,6 +23,59 @@ form{
     max-width: 500px;
     min-width: 300px;
     width: 60vw;
+    padding: 0 0 2em 0;
+}
+
+fieldset{
+    border: 0;
+    padding: 2rem 0 2rem 0;
+    border-bottom: 3px solid #3b3b4f
+}
+
+fieldset:last-of-type{
+    border-bottom: none;
+}
+
+input, 
+textarea,
+select{
+    width:100%;
+    margin:10px 0 0 0;
+    min-height: 2em;
+}
+
+.inline{
+    width: unset; 
+    margin: 0 0.5em 0 0;
+    vertical-align: middle;
+}
+
+input, 
+textarea{
+    background-color: #0a0a23;
+    border: 1px solid #0a0a23;
+
+    color:#ffffff;
+    
+}
+
+input[type="submit"]{
+    display: inline;
+    width: 60%;
+    min-width: 300px;
+    margin: 1em auto 1em auto;
+    height: 2em;
+    font-size: 1.1rem;
+    background-color: #3b3b4f;
+    border-color: white;
+}
+
+input[type="file"]{
+    padding: 1px 2px;
+}
+
+a{
+    color: #dfdfe2;
 }
 
 input::-webkit-outer-spin-button,
